<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">EniDemo</string>
    <string name="lancer_calculateur_de_moyennes">Lancer Calculateur de moyennes</string>
    <string name="lancer_quizz">Lancer le quizz</string>
    <string name="the_questionnaire">The questionnaire</string>
    <string name="comment_va">Est-ce que ça va?</string>
    <string name="non">Non</string>
    <string name="oui">Oui</string>
    <string name="niveau_bilboquet">Quel est ton niveau en bilboquet?</string>
    <string name="ok">ok</string>
    <string name="app_name_custom" tools:ignore="ExtraTranslation">Wololo</string>
    <string name="ton_adresse_mail">Ton adresse mail?</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hello_two_fragment">hello Two fragment</string>
    <string name="saisir_une_note">Saisir une note</string>
    <string name="ajouter_la_note">Ajouter la note</string>
    <string name="terminer">Terminer</string>

</resources>