<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".QuizzActivity">

    <!-- TP affichage seul-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="10dp">

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingTop="20sp"
            android:textSize="30sp"
            android:text="@string/the_questionnaire"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="30dp">

        <TextView
            android:id="@+id/tv_question1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start|center_vertical"
            android:paddingEnd="70sp"
            android:text="@string/comment_va"
            android:textSize="20sp"
            tools:ignore="RtlSymmetry" />

        <Switch
            android:id="@+id/switchButton"
            android:layout_width="69dp"
            android:layout_height="wrap_content"
            android:minHeight="48dp"
            android:textOff="@string/non"
            android:textOn="@string/oui"
            tools:ignore="UseSwitchCompatOrMaterialXml,DuplicateSpeakableTextCheck" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:padding="10dp">

        <TextView
            android:id="@+id/tv_question2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="20sp"
            android:text="@string/niveau_bilboquet"/>

        <SeekBar
            android:id="@+id/seek_bar"
            android:layout_width="350dp"
            android:layout_height="match_parent"
            android:padding="20dp"
            android:gravity="center"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:padding="10dp">

        <TextView
            android:id="@+id/tv_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="20sp"
            android:text="@string/ton_adresse_mail"/>

        <EditText
            android:id="@+id/edt_mail"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:autofillHints="Ton adresse mail"
            android:gravity="center"
            android:inputType="textEmailAddress"
            android:minHeight="48dp"
            tools:ignore="LabelFor, SpeakableTextPresentCheck" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="40dp"
        android:gravity="center">

        <Button
            android:id="@+id/buttonOK1"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/ok"
            tools:ignore="ButtonStyle,DuplicateSpeakableTextCheck" />

        <Button
            android:id="@+id/buttonOK2"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="16dp"
            android:text="@string/ok"
            tools:ignore="ButtonStyle"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">

        <Button
            android:id="@+id/buttonOK3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ok"
            tools:ignore="ButtonStyle"/>

        <Button
            android:id="@+id/buttonOK4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/ok"
            tools:ignore="ButtonStyle"/>

    </LinearLayout>

</LinearLayout>
