<?xml version="1.0" encoding="utf-8"?>

<!--layout permet d'activer le dataBinding-->
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <!--permettre l'utilisation du viewModel-->
    <data>
        <variable
            name="averageViewModel"
            type="com.example.enidemo.average.AverageViewModel" />
    </data>

    <!--alignement vertical des composants de la page-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp"
        tools:context=".average.AverageActivity">

        <!--titre : Calculateur de moyennes-->
        <TextView
            android:id="@+id/tv_example"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="30sp"
            android:text=""/>

        <!--champ de saisie des notes-->
        <EditText
            android:id="@+id/edt_note"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:hint="@string/saisir_une_note"
            android:inputType="numberDecimal"
            android:autofillHints="" />

        <Button
            android:id="@+id/btn_add_note"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            style="?android:attr/buttonBarButtonStyle"
            android:text="@string/ajouter_la_note"
            android:onClick="@{averageViewModel.onClickButtonAdd}">
        </Button>

        <Button
            android:id="@+id/btn_stop_note"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            style="?android:attr/buttonBarButtonStyle"
            android:text="@string/terminer"
            android:onClick="@{averageViewModel.onClickButtonStop}" />

        <!--afficher la moyenne-->
        <TextView
            android:id="@+id/txt_average"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="20sp"
            android:textStyle="bold"
            android:text="@{String.valueOf(averageViewModel.averageNote)}"
            />
    </LinearLayout>

</layout>